# WebCrawler

./: .env.template  .gitignore  a2a_main.py  api.py  app.py  crawl_incubators.py  crawl_results.csv  dashboard.py  debug_graph.py  docker-compose.searxng.yml  incubator_scheduler.py  langgraph.json  pyproject.toml  run.bat  run_incubator_scheduler.bat  run_streamlit.bat  searxng_settings.yml  streamlit_app.py  test_pipeline.py  urlverifier.ipynb
crawler/: config.py  cost_tracker.py  graph.py  hybrid_incubator_discovery.py  incubator_config.py  incubator_ranking_criteria.py  llm.py  models.py  neo4j_client.py  openclaw_client.py  package-lock.json  package.json  pyproject.toml  ranking_engine.py  routing.py  state.py  utils.py
crawler/agents/: __init__.py  a2a_pipeline.py  a2a_store.py  metric_suggester.py  orchestrator.py  ranking_agent.py  structuring_agent.py  url_relevance_agent.py
crawler/nodes/: entity_extractor.py  graph_structurer.py  incubator_discovery_node.py  incubator_graph_adapter.py  insights_generator.py  intent_parser.py  metrics_evaluator.py  mongo_logger.py  neo4j_ingester.py  preprocessor.py  react_investigator.py  source_verifier.py  url_discovery.py  url_relevance_filter.py  web_crawler.py
crawler/sources/: gov_portal_parser.py  incubator_discovery_v2.py  incubator_discovery_v3.py  incubator_discovery_v3_complete.py  india_incubator_discovery.py  neo4j_incubator_integration.py  retry_crawler.py
crawler/vector/: __init__.py  chroma_kb.py
frontend/: vite.config.js
tests/: test_preprocessor_parsing.py  test_retry_and_metrics.py
(+1 files in other folders)
